style: add ✨ and ⚡️ branding to Mu and Boo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 }
 
 @if (auth.isAuthenticated()) {
-  <div class="watermark">Mu ❤️ Boo | 144</div>
+  <div class="watermark">Mu ✨ ❤️ Boo ⚡️ | 144</div>
 }
 
 <div class="app-content">
