--- a/src/app/features/memories/memories.component.html
+++ b/src/app/features/memories/memories.component.html
@@ -17,7 +17,7 @@
           </mat-card-header>
           <mat-divider></mat-divider>
           <mat-card-content class="address-details">
-            <p><strong>Recipient:</strong> Mu & Boo</p>
+            <p><strong>Recipient:</strong> Mu ✨ & Boo ⚡️</p>
             <p><strong>Address Type:</strong> Romantic Infrastructure</p>
             <div class="special-instructions">
               <strong>Special Instructions:</strong>
